--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,6 +1,6 @@
 # add or override properties
 # See https://github.com/typesafehub/config/blob/master/HOCON.md for more details
-#db = "jdbc:h2:mem:pets"
+db = "jdbc:h2:mem:pets"
 #db.url = "jdbc:postgresql://localhost:5432/public?stringtype=unspecified"
 #db.user = "db.user"
 #db.password = "db.password"
