--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
         jooby_version = '1.6.+'
         kotlin_version = "1.3.+"
         doma_version = '2.24.+'
+        jdbi_version = '3.3.+'
 
     }
     repositories {
@@ -45,7 +46,7 @@ kapt {
 task copyDomaResources(type: Sync)  {
     from sourceSets.main.resources.srcDirs
     into compileKotlin.destinationDir
-//    include 'doma.compile.config'
+    include 'doma.compile.config'
     include 'META-INF/**/*.sql'
     include 'META-INF/**/*.script'
 }
@@ -85,7 +86,6 @@ dependencies {
     /*
      * JVM Frame Work
      */
-    implementation group: 'org.jooby', name: 'jooby', version: "${jooby_version}"
     // https://mvnrepository.com/artifact/org.jooby/jooby-lang-kotlin
     implementation group: 'org.jooby', name: 'jooby-lang-kotlin', version:  "${jooby_version}"
     // https://mvnrepository.com/artifact/org.jooby/jooby-netty
@@ -108,39 +108,60 @@ dependencies {
     implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.26'
     // https://mvnrepository.com/artifact/org.slf4j/slf4j-simple
     testImplementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.26'
+    // https://mvnrepository.com/artifact/ch.qos.logback/logback-classic
+    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+    // https://mvnrepository.com/artifact/ch.qos.logback/logback-core
+    implementation group: 'ch.qos.logback', name: 'logback-core', version: '1.2.3'
+    // https://mvnrepository.com/artifact/org.codehaus.groovy/groovy-all
+    implementation group: 'org.codehaus.groovy', name: 'groovy-all', version: '2.5.7'
+    // https://mvnrepository.com/artifact/com.google.inject/guice
+    compile group: 'com.google.inject', name: 'guice', version: '4.2.2'
 
 
     /*
      * DataBase Library
      */
-//    // https://mvnrepository.com/artifact/org.seasar.doma/doma
-//    //  doma sample ( https://github.com/domaframework/kotlin-sample )
-//    kapt group: 'org.seasar.doma', name: 'doma', version: '2.24.0'
-//    implementation group: 'org.seasar.doma', name: 'doma', version: '2.24.0'
+    // https://mvnrepository.com/artifact/org.seasar.doma/doma
+    //  doma sample ( https://github.com/domaframework/kotlin-sample )
+    kapt group: 'org.seasar.doma', name: 'doma', version: '2.24.0'
+    implementation group: 'org.seasar.doma', name: 'doma', version: '2.24.0'
     // https://mvnrepository.com/artifact/com.h2database/h2
     implementation group: 'com.h2database', name: 'h2', version: '1.4.+'
     // https://mvnrepository.com/artifact/org.postgresql/postgresql
     implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.+'
+    // https://mvnrepository.com/artifact/org.jdbi/jdbi3-core
+    implementation group: 'org.jdbi', name: 'jdbi3-core', version: "${jdbi_version}"
+    // https://mvnrepository.com/artifact/org.jdbi/jdbi3-kotlin
+    implementation group: 'org.jdbi', name: 'jdbi3-kotlin', version: "${jdbi_version}"
+    // https://mvnrepository.com/artifact/org.jdbi/jdbi3-kotlin-sqlobject
+    implementation group: 'org.jdbi', name: 'jdbi3-kotlin-sqlobject', version:  "${jdbi_version}"
+    // https://mvnrepository.com/artifact/org.jdbi/jdbi3-sqlobject
+    implementation group: 'org.jdbi', name: 'jdbi3-sqlobject', version:  "${jdbi_version}"
     // https://mvnrepository.com/artifact/org.jdbi/jdbi3-postgres
-    implementation group: 'org.jdbi', name: 'jdbi3-postgres', version: '3.8.2'
+    implementation group: 'org.jdbi', name: 'jdbi3-postgres', version: "${jdbi_version}"
+    // https://mvnrepository.com/artifact/org.koin/koin-core
+    implementation group: 'org.koin', name: 'koin-core', version: '2.0.0'
+    // https://mvnrepository.com/artifact/org.koin/koin-test
+    testImplementation group: 'org.koin', name: 'koin-test', version: '2.0.0'
 }
 
 // Define the main class for the application.
 mainClassName = 'org.example.AppKt'
-joobyRun {
-    mainClassName = 'org.example.AppKt'
-    compiler = 'on'
-    includes = ['**/*.class', '**/*.conf', '**/*.properties', '**/*.yml']
-    excludes = []
-    logLevel = 'info'
-    srcExtensions = [".java", ".kt", ".conf", ".properties", '.yml']
-}
+//joobyRun {
+//    mainClassName = 'org.example.AppKt'
+//    compiler = 'on'
+//    includes = ['**/*.class', '**/*.kt', '**/*.conf', '**/*.properties', '**/*.yml']
+//    excludes = []
+//    logLevel = 'info'
+//    srcExtensions = [".java", ".kt", ".conf", ".properties", '.yml']
+//}
 
 sourceSets.main.resources {
     srcDirs = ["conf", "public"]
 }
 
 idea {
+
     module {
         inheritOutputDirs = true
         sourceDirs += files('build/generated/source/kapt/main', 'build/generated/source/kaptKotlin/main')
